--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
 .App {
-  text-align: center;
+  position: relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Playfair Display', serif;
+  color: #6495ED;
+  padding: 8px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p, a {
+  font-family: 'Montserrat', serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.Navbar {
+  background-color: #6495ED;
+  color: silver;
+}
+
+.navbar-nav {
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  padding: 0px 8px;
+}
+
+a:hover {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-item {
+  padding: 12px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Main {
+  padding: 16px;
+}
+
+.Map {
+  flex-grow: '1';
+  display: block;
+  min-height: 25vh;
+  max-height: 100px; 
+  min-width: 50px;
 }
