--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,14 @@
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Playfair Display', serif;
   color: #6495ED;
-  padding: 8px;
+}
+
+h1 {
+  padding-top: 8px;
+}
+
+.Home h1 {
+  text-align: center;
 }
 
 p, a {
