--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,12 @@
   position: relative;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: 'Playfair Display', serif;
   color: #6495ED;
 }
@@ -15,7 +20,8 @@ h1 {
   text-align: center;
 }
 
-p, a {
+p,
+a {
   font-family: 'Montserrat', serif;
 }
 
@@ -68,7 +74,7 @@ a:hover {
   flex-grow: '1';
   display: block;
   min-height: 50vh;
-  max-height: 100px; 
+  max-height: 100px;
   min-width: 50px;
 }
 
@@ -85,4 +91,19 @@ a:hover {
 
 .Pin p:hover {
   font-size: large;
+}
+
+.VenuePhoto {
+  padding: 12px;
+  border-style: solid;
+  border-color: #6495ED;
+  border-width: 4px;
+  border-radius: 1.5rem;
+  display: block;
+}
+
+.VenuePhoto img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
 }
