--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
-.App {
+#App {
   position: relative;
+  min-height: 100vh;
+  background-color: #6495ed;
+  padding-bottom: 150px;
+  margin: auto;
+}
+
+#Main {
+  padding: 16px 0px 0px 0px;
+  background-color: #ffffff;
 }
 
 h1,
@@ -8,21 +17,30 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Playfair Display', serif;
-  color: #6495ED;
+  font-family: "Playfair Display", serif;
+  color: #6495ed;
 }
 
 h1 {
   padding-top: 8px;
+  text-align: center;
 }
 
-.Home h1 {
+#Home p {
   text-align: center;
+}
+
+#Home h2 {
+  text-align: center;
+}
+
+#Home svg {
+  color: #ff99cc;
 }
 
 p,
 a {
-  font-family: 'Montserrat', serif;
+  font-family: "Montserrat", serif;
 }
 
 .Navbar {
@@ -31,7 +49,7 @@ a {
 }
 
 .navbar {
-  background-color: #6495ED;
+  background-color: #6495ed;
 }
 
 .navbar-nav {
@@ -66,12 +84,12 @@ a:hover {
   padding: 16px;
 }
 
-.Countdown h1 {
+#Countdown h1 {
   text-align: center;
 }
 
 .Map {
-  flex-grow: '1';
+  flex-grow: "1";
   display: block;
   min-height: 50vh;
   max-height: 100px;
@@ -79,9 +97,9 @@ a:hover {
 }
 
 .Pin {
-  background-color: #6495ED;
+  background-color: #6495ed;
   display: block;
-  color: #6495ED;
+  color: #6495ed;
 }
 
 .Pin p {
@@ -93,10 +111,14 @@ a:hover {
   font-size: large;
 }
 
+#accomodationLinks {
+  text-align: center;
+}
+
 .VenuePhoto {
   padding: 12px;
   border-style: solid;
-  border-color: #6495ED;
+  border-color: #6495ed;
   border-width: 4px;
   border-radius: 1.5rem;
   display: block;
@@ -106,4 +128,24 @@ a:hover {
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
+}
+
+.BannerPhoto {
+  width: 100%;
+  display: block;
+}
+
+.BannerPhoto img {
+  max-width: 100vw;
+  object-fit: contain;
+  margin: 0;
+}
+
+#Gifts {
+  text-align: center;
+}
+
+#Gifts svg {
+  color: #ff99cc;
+  padding-bottom: 16px;
 }
