--- a/src/App.css
+++ b/src/App.css
@@ -103,16 +103,19 @@ a:hover {
 }
 
 .Pin p {
-  color: black;
+  color: #6495ed;
+  font-style: oblique;
   font-size: medium;
+  font-weight: bolder;
 }
 
 .Pin p:hover {
-  font-size: large;
+  font-size: x-large;
 }
 
 #accomodationLinks {
   text-align: center;
+  color: #6495ed;
 }
 
 .VenuePhoto {
@@ -139,6 +142,10 @@ a:hover {
   max-width: 100vw;
   object-fit: contain;
   margin: 0;
+}
+
+#Schedule {
+  text-align: center;
 }
 
 #Gifts {
